--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "ImGuiFileDialog"]
 	path = Launcher/external/ImGuiFileDialog
 	url = https://github.com/aiekick/ImGuiFileDialog
+[submodule "Launcher/external/ImGuiFileDialog"]
+	path = Launcher/external/ImGuiFileDialog
+	url = https://github.com/aiekick/ImGuiFileDialog
