--- a/Launcher/CMakeLists.txt
+++ b/Launcher/CMakeLists.txt
@@ -89,3 +89,5 @@ endif()
 if (IS_DEV)
   set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /DIS_DEV")
 endif()
+
+SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES LINK_FLAGS    "/MANIFESTUAC:\"level='requireAdministrator' uiAccess='false'\" /SUBSYSTEM:WINDOWS")
