--- a/Launcher/CMakeLists.txt
+++ b/Launcher/CMakeLists.txt
@@ -48,6 +48,8 @@ SET(ALL_HEADERS
     "headers/logger/enum.h"
     "headers/logger/const.h"
 
+    "headers/files_manager/files_manager.h"
+
     "headers/core.h"
     "headers/localize.h"
     "headers/consts.h"
@@ -56,8 +58,6 @@ SET(ALL_HEADERS
     "headers/context.h"
     "headers/injector.h"
     "headers/misc.h"
-
-    "headers/SDK/FB/build_info.h"
 
     "headers/ui/gui.h"
     "headers/ui/settings_window.h"
@@ -71,6 +71,7 @@ SET(ALL_HEADERS
 
 SET(ALL_CPP
     "source/logger/logger.cpp"
+    "source/files_manager/files_manager.cpp"
 
     "source/core.cpp"
     "source/localize.cpp"
