--- a/Launcher/CMakeLists.txt
+++ b/Launcher/CMakeLists.txt
@@ -50,16 +50,19 @@ SET(ALL_HEADERS
 
     "headers/files_manager/files_manager.h"
 
+    "headers/fonts.h"
     "headers/core.h"
     "headers/localize.h"
     "headers/consts.h"
     "headers/options_id.h"
     "headers/config.h"
     "headers/context.h"
+    "headers/hotkey_manager.h"
     "headers/injector.h"
     "headers/misc.h"
 
     "headers/ui/gui.h"
+    "headers/ui/edit_hotkey_window.h"
     "headers/ui/settings_window.h"
     "headers/ui/locale_window.h"
     "headers/ui/status_window.h"
@@ -77,9 +80,11 @@ SET(ALL_CPP
     "source/localize.cpp"
     "source/options_id.cpp"
     "source/config.cpp"
+    "source/hotkey_manager.cpp"
     "source/injector.cpp"
     "source/misc.cpp"
     "source/ui/gui.cpp"
+    "source/ui/edit_hotkey_window.cpp"
     "source/ui/settings_window.cpp"
     "source/ui/locale_window.cpp"
     "source/ui/status_window.cpp"
